--- a/sass/actr.scss
+++ b/sass/actr.scss
@@ -31,9 +31,28 @@
    font-weight:100;
  }
 
+ .caption-box{
+
+   margin:10px 10px 10px 10px;
+   background-color:#EEE;
+
+   .img-wrapper{
+     padding:20px;
+     img{
+       max-width:400px;
+     }
+   }
+
+   .text-wrapper{
+     padding: 10px;
+     font-size:14px;
+   }
+ }
+
  section#header{
    text-align:center;
    margin-bottom:120px;
+   height:100vh;
 
    img{
      height:200px;
@@ -44,26 +63,27 @@
      font-weight:100;
    }
 
-   .play-button{
-     margin-top:60px;
+   a{
+     width:200px;
+
+     &.play-button{
+       margin-top:10px;
+     }
+
+     &.github-button{
+       margin-top:100px;
+       background-color: #3498db;
+     }
    }
+
  }
 
+section#about{
+  margin-top:0px;
+}
+
  section#game{
-   .game-image{
 
-     .img-wrapper{
-       background-color:#000;
-       padding:20px;
-     }
-
-     .text-wrapper{
-       padding: 10px;
-     }
-
-     margin:50px;
-     background-color:#EEE;
-   }
  }
 
  section#lessons{
@@ -79,6 +99,19 @@
          color: #999;
        }
      }
+   }
+ }
+
+ section#interface{
+   iframe{
+     width:100%;
+     height: 57%;
+   }
+ }
+
+ section#design{
+   .uk-tab > li{
+     line-height:40px;
    }
  }
 
