--- a/sass/actr.scss
+++ b/sass/actr.scss
@@ -113,6 +113,8 @@ section#about{
    }
 
    .install-steps{
+     margin-left:40px;
+
      & > li{
        margin-top:20px;
        margin-bottom:20px;
